tdf#167229 sw floattable: fix missing cell background with redlines

Open the DOCX file, the 3rd table should have a gray background in its
B2 cell, but its background is white.

It seems this happens because there are 2 floating tables before the
table and the first floating table has a redline. Commit
288db6eb47fbbd2b3ca34ffea0686d8ed8ed9be9 (tdf#132271 DOCX: import change
tracking in floating tables, 2020-09-07) added special handling of
redlines inside floating tables, and I moved that code around for
SwFormatFlySplit in c50bf5a5daaae3d40f89ea0784a75a8a571c208d (sw
floattable: remove no longer needed DOCX import heuristics, 2023-04-12).
The trouble is that once these pending redlines are processed, nobody
clears rFramedRedlines, so it gets processed also for a next floating
table, which pollutes the state of the importer, which leads to missing
cell properties for later tables.

Fix the problem by clearing the redline list in
DomainMapperTableHandler::endTable(), which restores the invariant that
once the redline list is processed, it's cleared -- that was there in
the old SectionPropertyMap::CloseSectionGroup() code before the
SwFormatFlySplit work.

An alternative I've considered is to just catch exceptions in
BeforeConvertToTextFrame() when getting the TextTable and Cell
properties, but that would still result in this unwanted behavior that a
floattable-with-redlines has an influance on the next floattable.

Change-Id: I9998a46d72a72172dffcf85bf96b3478d63c9269
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187530
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>