sw/source/writerfilter/dmapper/DomainMapperTableHandler.cxx
@@ -1668,7 +1668,7 @@ void DomainMapperTableHandler::endTable(unsigned int nestedTableLevel)
             bool bRecordChanges = m_rDMapper_Impl.GetSettingsTable()->GetRecordChanges();
             if (xTextAppendAndConvert.is() && !(bInFootnote && bRecordChanges))
             {
-                const std::deque<StoredRedline>& rFramedRedlines = m_rDMapper_Impl.m_aStoredRedlines[StoredRedlines::FRAME];
+                std::deque<StoredRedline>& rFramedRedlines = m_rDMapper_Impl.m_aStoredRedlines[StoredRedlines::FRAME];
                 std::vector<sal_Int32> redPos, redLen;
                 std::vector<OUString> redCell;
                 std::vector<OUString> redTable;
@@ -1722,6 +1722,9 @@ void DomainMapperTableHandler::endTable(unsigned int nestedTableLevel)
                 }
 
                 AfterConvertToTextFrame(m_rDMapper_Impl, rFramedRedlines, redPos, redLen, redCell, redTable);
+
+                // These redlines are not relevant for the next floating table, clear them.
+                rFramedRedlines.clear();
             }
 
             if (xFrameAnchor.is() && eBreakType != style::BreakType_NONE)
